@@ -1,5 +1,16 @@
 2012-12-13  Dirk Pranke  <dpranke@chromium.org>
 
+        Fix a mis-named variable after r137621.
+        https://bugs.webkit.org/show_bug.cgi?id=104871
+
+        Unreviewed, build fix.
+
+        * Scripts/webkitpy/layout_tests/views/buildbot_results.py:
+        (BuildBotPrinter.print_results):
+        * Scripts/webkitpy/layout_tests/views/buildbot_results_unittest.py:
+
+2012-12-13  Dirk Pranke  <dpranke@chromium.org>
+
         webkitpy: rename ResultSummary
         https://bugs.webkit.org/show_bug.cgi?id=104871
 
